--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,37 @@
-<p>dashboard works!</p>
+<div class="container">
+    <div class="column1">
+      <img class="container__image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSnbh4M4CnsSTa8d5QdnEyEAAo29qF7QPwEvQ&usqp=CAU"/>
+    
+        <h2><b>ABOUT</b></h2>
+        <p>
+            Inventory changes constantly. Throughout each day, 
+            sales, returns, new receipts even damage and theft affect your 
+            inventory levels. While daunting, effective inventory management 
+            and inventory control are the most 
+            important jobs in a successful retail or wholesale business.
+        </p>
+
+      
+    </div>
+    <div class="column2">
+      <img class="container__image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ6BhLnjl3AS_gpfJ1ZKJra_nDqbC_ofFNbuQ&usqp=CAU"/>
+   
+        <h2><b>VISION</b></h2>
+        <p>
+            inventory management system helps manufacturers, 
+            distributors and retailers maximize profitability 
+            by ensuring that the right inventory 
+            is in the right place at the right time.
+        </p>
+    
+    </div>
+    <div class="column3">
+      <img class="container__image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUdn6IF_XFWkNsvoH36XjRL32DBMvTZt7Ibg&usqp=CAU">
+  
+        <h2><b>MISSION</b></h2>
+        <p>The primary goal of inventory management is to ensure that all kinds of 
+            materials are accessible whenever the production department needs them, ensuring that 
+            production is not stopped or slowed down due to a lack of resources.</p>
+  
+    </div>
+  </div>
