--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="../../assets/inventory-management-system.webp"   alt="">
+   <h2><i>INVENTORY MANAGEMENT SYSTEM</i></h2>
+    <img src="../../assets/inventory-management-system.webp"  width="1500" height="600"  alt="">
 </body>
 </html>
