--- a/frontend/src/app/registration/registration.component.html
+++ b/frontend/src/app/registration/registration.component.html
@@ -27,7 +27,7 @@
                       <br>
                       <button type="submit" class="btn btn-primary">Register</button>
                     </form>
-                    <a style="color:#fff ; margin-top: 10px;" routerLink="/login">Already Registered? Click to Login!!</a>
+                    <a style="color:rgb(123, 120, 255) ; margin-top: 10px;" routerLink="/login">Already Registered? Click to Login!!</a>
       
           </div>
       </div>
