--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,6 +4,8 @@
     <div class="container">
        
         <ul class=" menu nav navbar-nav" routerLinkActive="active">
+            <li class="nav-item"><a class="nav-link" routerLink="dashboard">Dashboard</a></li>
+
             <li class="nav-item"><a class="nav-link" routerLink="home">Home</a></li>
             <li class="nav-item"><a class="nav-link" routerLink="admin">Admin</a></li>
             <li class="nav-item"><a class="nav-link" routerLink="customers">Customers</a></li>
